--- a/deploy/nginx-port3000.conf
+++ b/deploy/nginx-port3000.conf
@@ -1,7 +1,9 @@
 # nginx server block for DivinG_BAZ - reverse proxy from port 80 to 3000
+# Works on both macOS and Linux/EC2
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
 
     # Reverse proxy configuration
     location / {
@@ -16,7 +18,7 @@ server {
 
     # Optional: static files if needed
     location /static/ {
-        alias /Users/OneMedia/GHOST/DivinG_BAZ/static/;
+        alias /home/ubuntu/DivinG_BAZ/static/;
         expires 30d;
     }
 }
