--- a/deploy/gunicorn.service
+++ b/deploy/gunicorn.service
@@ -7,14 +7,14 @@
 #   5. Check: sudo systemctl status gunicorn
 
 [Unit]
-Description=gunicorn daemon for DivinG_BAZ
+Description=gunicorn daemon for Diving
 After=network.target
 
 [Service]
 Type=notify
 User=ubuntu
 Group=www-data
-WorkingDirectory=/home/ubuntu/DivinG_BAZ
+WorkingDirectory=/home/ubuntu/diving
 Environment=PATH=/home/ubuntu/.local/bin:/usr/bin
 Environment=PYTHONUNBUFFERED=1
 ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 127.0.0.1:3000 --timeout 90 --access-logfile - --error-logfile - app:app
