--- a/deploy/nginx.diving.conf
+++ b/deploy/nginx.diving.conf
@@ -1,15 +1,2 @@
 # nginx server block for diving.onemedia.asia
-server {
-    listen 80;
-    server_name diving.onemedia.asia www.diving.onemedia.asia;
-
-    # Let certbot handle SSL later; for now redirect to https if cert exists
-    location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://127.0.0.1:8000;
-        proxy_read_timeout 90;
-    }
-}
+sudo nginx -t
